<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favouritetvshows"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/menu_favouritetvshows" />
        <item
            android:id="@+id/nav_searchtvshows"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/menu_searchtvshows" />
        <item
            android:id="@+id/nav_createtvshow"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_createtvshow" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_about" />
    </group>
</menu>