<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_to_favourites"
        android:orderInCategory="100"
        android:title="@string/title_add_to_favourites"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove_from_favourites"
        android:orderInCategory="100"
        android:title="@string/title_remove_from_favourites"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_show"
        android:orderInCategory="100"
        android:title="@string/title_edit_show"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/title_delete_show"
        app:showAsAction="never" />
</menu>