<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <ImageView
            android:id="@+id/ivCover"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:contentDescription="@string/search_cover_content_description"
            app:srcCompat="@drawable/ic_broken_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toEndOf="@+id/ivCover"
            app:layout_constraintTop_toTopOf="@+id/ivCover"
            tools:text="Friends (1994)" />

        <TextView
            android:id="@+id/tvGenres"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="Comedy, Drama" />

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvGenres"
            app:layout_constraintTop_toBottomOf="@+id/tvGenres"
            tools:text="Follows the personal and professional lives of six twenty to thirty-something-year-old friends living in Manhattan. " />

        <ImageButton
            android:id="@+id/ibStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ivCover"
            app:layout_constraintTop_toBottomOf="@+id/tvSummary"
            app:srcCompat="@drawable/ic_star_border"
            android:contentDescription="@string/star_button_content_description" />

        <ImageButton
            android:id="@+id/ibUnstar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ivCover"
            app:layout_constraintTop_toBottomOf="@+id/tvSummary"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_star_filled"
            android:contentDescription="@string/unstar_button_content_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>